# docmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
docmark/: __init__.py  cli.py
docmark/converters/: __init__.py  docx.py  html.py  markdown.py  pdf.py
docmark/core/: __init__.py  formatter.py  llm.py  processor.py
docmark/utils/: __init__.py  file.py  image.py  text.py
docs/: llm_formatter_refactor_plan.md
tests/: README.md  conftest.py  test_basic.py  test_bidirectional.py  test_cli.py  test_formatters.py  test_image_handling.py  test_utils_file.py
tests/test_data/: sample.docx  sample.html  sample.md  sample_with_images.docx  sample_with_images.html  sample_with_images.md
